
Version 0.8.7	- xx January 2002
  * Fix spurious warning when accessing 'static' class members that are methods
        (e.g. class C(B): __super_init = B.__init__)
  * Add -9/--members option to warn about unused data members
  * Fix some strange spurious warnings and exceptions
  * Handle string multiplication (helps format strings)
        code like this doesn't generate a warning now:  '%d ' * 3 % (1, 2, 3)
  * Add warning statements with no effect (load var, but do nothing)
  * Add -w/--shadow for local variable shadowing global variable
  * Handle nested scopes better, includes fixing a crash and
	eliminating spurious warnings

Version 0.8.6	- 16 November 2001
  * Add -5/--maxrefs for maximum # of identifier references (Law of Demeter)
  * Fix problem where user defined classes weren't checked for valid attributes
  * Allow use of __pychecker__ in class scope
  * Fix a lot of global function arg counts for Python 2.2
  	(many constructors can take no arguments now)
  * Fix spurious warning (Function return types are inconsistent)
	when multiple returns w/a constant & a local variable of same type
  * Fix spurious warning for format strings when using a dict local variable
  * Rename pychecker.sh script to pychecker on Unix

Version 0.8.5	- 17 October 2001
  * Add check for using builtin function/method const (None) return value
  	(e.g., not_a_new_list = [].sort())
  * Add check for builtin object method calls for right # args
  	(e.g., [].count(), {}.keys(), file.seek(0))
  * Add check for object method calls for right # args
  	(calling object when type is known, ie instatiated locally)
  * Add check for modifying a parameter that has a default value
  	(e.g., def func(mutable = []): mutable.append(0))
  * Add check for using future keywords (e.g., yield)
  * Add check for using unary positive on variables (e.g., +x)
  * Add check for recursive calls to __repr__ implementations (`self`)